Too short track info dataLen returned at least on HL-DT-ST BH10LS30 Workaround the structure len like other drives but extend from 4 to 6 bytes minimum check. This avoids a 0 byte BR-R capacity bug with this drive

BUG: 268307